--- a/src/index.css
+++ b/src/index.css
@@ -9,45 +9,44 @@
 
 
 body {
-    font-family: 'Roboto', sans-serif;
-    background-color: bg-gray-100;
-    color: text-gray-700;
-  }
-  
-  /* Center content on the page */
-  .container {
-    @apply mx-auto;
-  }
-  
-  /* Style for the Movies component */
+  font-family: 'Roboto', sans-serif;
+  background-color: bg-gray-100;
+  color: text-gray-700;
+}
+
+/* Center content on the page */
+.container {
+  @apply mx-auto;
+}
+
+/* Style for the Movies component */
+.movies-container {
+  @apply p-2;
+}
+
+.movie-card {
+  @apply border border-gray-900 rounded overflow-hidden transition-transform duration-300 ease-in-out hover:transform scale-105;
+}
+
+.movie-card img {
+  @apply w-full h-auto object-cover rounded;
+}
+
+.movie-card h3 {
+  @apply text-lg mt-2;
+}
+
+
+
+
+@media (min-width: 768px) {
   .movies-container {
-    @apply p-4;
+    @apply grid grid-cols-2 gap-4;
   }
-  
-  .movie-card {
-    @apply border border-gray-900 rounded overflow-hidden transition-transform duration-300 ease-in-out hover:transform scale-105;
-  }
-  
-  .movie-card img {
-    @apply w-full h-auto;
-  }
-  
-  .movie-card h3 {
-    @apply text-lg mt-2;
-  }
-  
-  
+}
 
-
-  @media (min-width: 768px) {
-    .movies-container {
-      @apply grid grid-cols-2 gap-4;
-    }
+@media (min-width: 1024px) {
+  .movies-container {
+    @apply grid-cols-3;
   }
-  
-  @media (min-width: 1024px) {
-    .movies-container {
-      @apply grid-cols-3;
-    }
-  }
-  
+}
