--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,36 @@ body {
   color: text-gray-700;
 }
 
+.modal{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,.4);
+  height: 100vh;
+  z-index: 999999999999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal .modal-wrapper{
+  min-width: 500px;
+}
+
+.img-edit-wrapper{
+  width: 600px;
+  height: 600px;
+}
+
+.img-edit-wrapper img{
+  width: 100%;
+  height:100%;
+  object-fit: contain
+}
+
+
 /* Center content on the page */
 .container {
   @apply mx-auto;
@@ -75,13 +105,13 @@ body {
 }
 
 .img-details-wrapper {
-  height: 1000px;
+  height: 600px;
   width: 600px;
 }
 .img-details-wrapper img {
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 @media (min-width: 768px) {
