--- a/src/index.css
+++ b/src/index.css
@@ -52,13 +52,13 @@ body {
   color: text-gray-700;
 }
 
-.modal{
+.modal {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0,0,0,.4);
+  background-color: rgba(0, 0, 0, 0.4);
   height: 100vh;
   z-index: 999999999999;
   display: flex;
@@ -66,22 +66,27 @@ body {
   align-items: center;
 }
 
-.modal .modal-wrapper{
+.modal .modal-wrapper {
   min-width: 500px;
 }
 
-.img-edit-wrapper{
+.img-edit-wrapper {
   width: 600px;
   height: 600px;
 }
 
-.img-edit-wrapper img{
+.img-edit-wrapper img {
   width: 100%;
-  height:100%;
-  object-fit: contain
+  height: 100%;
+  object-fit: contain;
 }
-
-
+/* Sticky Footer */
+main {
+  min-height: calc(100vh - 130px);
+}
+.footer {
+  height: 50px;
+}
 /* Center content on the page */
 .container {
   @apply mx-auto;
